apps/core-services/cockroachdb/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockroachdb
  namespace: core-services
spec:
  tls:
  - secretName: cert-dev.skyloft.cc
  rules:
  - host: db.dev.skyloft.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cockroachdb-public
            port:
              number: 8080
